--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
+
+KAFKA_BROKERS=
+KAFKA_USERNAME=
+KAFKA_PASSWORD=
